--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Paytm Clone</title>
-    <meta name="description" content="A modern payment application" />
+    <title>Paytm Clone - Biometric Payment</title>
+    <meta name="description" content="A modern payment application with biometric security" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <meta name="theme-color" content="#00239C" />
     <style>
       body {
         margin: 0;
